Splitted plot drawing funcions into separate files

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script type="text/javascript" src='js/helpers.js'></script>
+        <script type="text/javascript" src='js/draw_range_plot.js'></script>        
         <script src="js/main.js"></script>
     </body>
 </html>
