--- a/index.html
+++ b/index.html
@@ -52,13 +52,22 @@
                     Line shows <a href='https://www.khanacademy.org/math/cc-sixth-grade-math/cc-6th-data-statistics/cc-6th/v/calculating-interquartile-range-iqr'>interquartile range</a> of interest rate. Left end is first quartile, right end is the third.</p>
                 </div>                
             </div>
+            <div class='row'>
+                <div class='col=md-10'>
+                    <div id='map'></div>
+                </div>
+            </div>
         </div>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.20/topojson.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+        <script type="text/javascript" src='js/vendor/colorbrewer.js'></script>        
         <script type="text/javascript" src='js/helpers.js'></script>
-        <script type="text/javascript" src='js/draw_range_plot.js'></script>        
+        <script type="text/javascript" src='js/draw_range_plot.js'></script>
+        <script type="text/javascript" src='js/draw_map.js'></script>                
         <script src="js/main.js"></script>
     </body>
 </html>
