Finalized map plot

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 </div>                
             </div> 
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-7">
                     <div id='rate_quartiles'></div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-5">
                     <h2>Range of interest rates by state</h2>
                     
                     <p><svg width='6', height='6'><circle cx='2', cy='2', r='2', fill='gray'></circle></svg>Dot is median interest rate in state.</p>
@@ -54,8 +54,14 @@
                 </div>                
             </div>
             <div class='row'>
-                <div class='col=md-10'>
+                <div class='col-md-7'>
                     <div id='map'></div>
+                </div>
+                <div class='col-md-5'>
+                    <h2>Average interest rate in US states</h2>
+                    <p>Darker color &rarr; larger interest rate.</p>
+                    <p>When you hover a state a tooltip will appear.</p>
+                    <p>Tooltip shows share of loans by loan status. Bad statuses are highlighted <span style='color:#fc8d59'>in orange</span>, good ones are <span style='color:#91bfdb'>in blue color</span>.</p>
                 </div>
             </div>
         </div>
