--- a/index.html
+++ b/index.html
@@ -20,30 +20,36 @@
             <div class="row">
                 <div class='col-md-12'>
                     <div class='page-header'>
-                        <h1>Interest rate and quality of loans in US states</h1>
+                        <h1>Loan interest rate and their quality in US states</h1>
                         <h2><small>A part of Data Analyst nanodegree course, by <a rel="author" href="http://barsukov.net/">Nikita Barsukov</a></small></h2>
                     </div>
                 </div>
             </div>
             <div class='row'>
                 <div class="col-md-8">
-                    <p>This is a grading project from course 'Make effective data visualization', a part of Data Analyst Nanodegree. Aim of this project is to select a <a href='https://docs.google.com/document/d/1w7KhqotVi5eoKE3I_AZHbsxdr-NmcWsLTIiZrpxWx4w/pub?embedded=true'>dataset provided by Udacity</a>, or own dataset and create a web visualization that tells a story in this data. I chose dataset of loans provided by Prosper, US lending marketplace. <a href='https://s3.amazonaws.com/udacity-hosted-downloads/ud651/prosperLoanData.csv'>CSV file</a> as well as file with <a href['https://docs.google.com/spreadsheets/d/1gDyi_L4UvIrLTEC6Wri5nbaMmkGmLQBk-Yx3z0XDEtI/edit?usp=sharing'>description of every column</a> is compiled by Udacity itself, it is available for download from its site.</p>
+                    <p>This is a grading project from course 'Make effective data visualization', a part of Data Analyst Nanodegree. Aim of this project is to select a <a href='https://docs.google.com/document/d/1w7KhqotVi5eoKE3I_AZHbsxdr-NmcWsLTIiZrpxWx4w/pub?embedded=true'>dataset provided by Udacity</a>, or own dataset and create a web visualization that tells a story in this data. I chose dataset of loans provided by Prosper, US lending marketplace. <a href='https://s3.amazonaws.com/udacity-hosted-downloads/ud651/prosperLoanData.csv'>CSV file</a> as well as file with <a href='https://docs.google.com/spreadsheets/d/1gDyi_L4UvIrLTEC6Wri5nbaMmkGmLQBk-Yx3z0XDEtI/edit?usp=sharing'>description of every column</a> is compiled by Udacity itself, it is available for download from its site.</p>
                     <p>Dataset is very large, it has almost 140,000 rows and 81 variables. It contains various columns about loan and borrower, ex. demographic data of borrwer, loan interest rate, size, various loan classifications, etc.</p>
-                    <p>With data this big it is possible to construct a lot of different narratives. I decided to focus on loan rates by US state, and its relation to quality of loans. I chose categorical variable <code>LoanStatus</code> as the one that represents loan quality.</p>
+                    <p>With data this big it is possible to construct a lot of different narratives. I decided to focus on loan rates by US state, and its relation to quality of loans.</p>
                 </div>
                 <div class="col-md-4">
                     <h4>Additional information</h4>
                     <ul>
-                        <li>Sources, code documentation, snippets</li>
+                        <li><a href='https://github.com/nikita-barsukov/data_vis_udacity/blob/master/Sources.md'>Sources, used snippets</a></li>
                         <li>Project description</li>
-                        <li>Technical notes</li>
-                        <li>Code repository on Github</li>
+                        <li><a href='https://github.com/nikita-barsukov/data_vis_udacity'>Code repository on Github</a></li>
                     </ul>
                 </div>                
             </div> 
+            <hr>
+            <div class='row'>
+                <div class='col-md-7'>
+                    <p>Let's start with exploring how interest rates vary across the states. I prepared a separate dataset with median interest rate by state. It is also interesting to see how large is the variation of interest rates. For that I included the interquartile range.</p>                    
+                </div>
+            </div>
             <div class="row">
                 <div class="col-md-7">
                     <div id='rate_quartiles'></div>
+                    <p>Interest rates have rather narrow variations in US states. Lower quartile and median interest rate are within 5 percent points across all 51 states. Upper quartile varies more, between 19&mdash;28%.</p>
                 </div>
                 <div class="col-md-5">
                     <h2>Range of interest rates by state</h2>
@@ -56,7 +62,16 @@
             <hr>
             <div class='row'>
                 <div class='col-md-7'>
+                    <p>Let's visualize interest rate and loan quality by state next. I used variable LoanStatus as a measurement of loan quality. This</p>
+
+                    <p>I put median interest rate on a US map, and colored states according to its median interest rate. Hovering over each state generates a barchart with share of loans by loan type.</p>
+                </div>
+            </div>            
+            <div class='row'>
+                <div class='col-md-7'>
                     <div id='map'></div>
+                    <p>Our previous plot siggested low variaion of interest rates, and this map confirms it. Most of states are in middle buckets, lowest buckets are only in Maine and Iowa. Southern states have larger interest rates, other states with high interest rate are scattered across the country.</p>
+                    <p>States with higher interest rates indeed tend to have higher shares of bad loan types. To see if this is indeed true, let's move to a final plot.</p>
                 </div>
                 <div class='col-md-5'>
                     <h2>Average interest rate in US states</h2>
@@ -65,10 +80,11 @@
                     <p>Tooltip shows share of loans by loan status. Bad statuses are highlighted <span style='color:#fc8d59'>in orange</span>, good ones are <span style='color:#91bfdb'>in blue color</span>.</p>
                 </div>
             </div>
-            <hr>
+            <hr>            
             <div class='row'>
                 <div class='col-md-7'>
                     <div id='scatterplot'></div>
+                    <p>This is perhaps the most interesting plot in this report. Indeed the interest rate increase with share of bad loans. However there are two distinct outlier states: Maine and Iowa. They have by far largest share of bad loans, around 30% each, while median interest rate is the lowest, around 15%.</p>
                 </div>
                 <div class='col-md-5'>
                     <h2>Interest rate and share of bad loans<br><small>in US states</small></h2>
@@ -80,7 +96,19 @@
                         <li>Past Due</li>
                     </ul>
                     <p>Hover over a dot to get a tooltip with exact values of average loan interest and share of bad loans.</p>
+                    <p>Note the y axis starts at 14%, not at 0%.</p>
                 </div>                
+            </div>
+            <div class='row'>
+                <div class="col-md-7">
+                    <h2>Conclusion</h2>
+                    <ul>
+                        <li>Interest rates vary little across the US states</li>
+                        <li>Southern states have highest median interest rate</li>
+                        <li>Share of bad loans highly correlate with interest rate in state</li>
+                        <li>Two outlier states with high share of bad loans and low interest rate: Maine and Iowa.</li>
+                    </ul>
+                </div>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
