Final corrections before submission

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <hr>
             <div class='row'>
                 <div class='col-md-7'>
-                    <p>Let's visualize interest rate and loan quality by state next. I used variable LoanStatus as a measurement of loan quality. This</p>
+                    <p>Let's visualize interest rate and loan quality by state next. I used variable LoanStatus as a measurement of loan quality.</p>
 
                     <p>I put median interest rate on a US map, and colored states according to its median interest rate. Hovering over each state generates a barchart with share of loans by loan type.</p>
                 </div>
@@ -84,7 +84,7 @@
             <div class='row'>
                 <div class='col-md-7'>
                     <div id='scatterplot'></div>
-                    <p>This is perhaps the most interesting plot in this report. Indeed the interest rate increase with share of bad loans. However there are two distinct outlier states: Maine and Iowa. They have by far largest share of bad loans, around 30% each, while median interest rate is the lowest, around 15%.</p>
+                    <p>This is perhaps the most interesting plot in this report. Indeed the interest rate increase with share of bad loans. However there are two distinct outlier states: Maine and Iowa. They have by far largest share of bad loans, above 35% each, while median interest rate is the lowest, around 15%.</p>
                 </div>
                 <div class='col-md-5'>
                     <h2>Interest rate and share of bad loans<br><small>in US states</small></h2>
