--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                     <h4>Additional information</h4>
                     <ul>
                         <li><a href='https://github.com/nikita-barsukov/data_vis_udacity/blob/master/Sources.md'>Sources, used snippets</a></li>
-                        <li>Project description</li>
-                        <li><a href='https://github.com/nikita-barsukov/data_vis_udacity'>Code repository on Github</a></li>
+                        <li><a href='https://github.com/nikita-barsukov/data_vis_udacity'>Code repository on Github and project description</a></li>
                     </ul>
                 </div>                
             </div> 
